--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,32 @@ coverage/
 
 # Local Netlify folder
 .netlify
+
+# Documentation and Guides
+*.md
+!README.md
+
+# Backtest Results
+*.html
+*.json
+*.csv
+backtest_results/
+
+# Logs and Temporary Files
+*.log
+*.txt
+debug_output.txt
+temp_test_output.txt
+
+# Database
+*.db
+*.backup.*
+
+# Scripts
+*.bat
+*.ps1
+*.sh
+start_system.py
+
+# Docker
+docker-compose.yml
