--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,20 +3,29 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
+      {
+        "version": 2,
+        "builds": [
+          {
+            "src": "package.json",
+            "use": "@vercel/static-build",
+            "config": {
+              "distDir": "build"
+            }
+          }
+        ],
+        "rewrites": [
+          {
+            "source": "/health",
+            "destination": "http://161.118.218.33/health"
+          },
+          {
+            "source": "/api/:path*",
+            "destination": "http://161.118.218.33/api/:path*"
+          },
+          {
+            "source": "/(.*)",
+            "destination": "/index.html"
+          }
+        ]
       }
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "http://161.118.218.33/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
-}
