--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,40 +2,56 @@ name: Deploy to Oracle VM
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - 'backend/**'
-      - 'docker-compose.yml'
+      - 'docker-compose-fix.yml'
       - '.github/workflows/deploy.yml'
+  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Deploy to VM
-      env:
-        SSH_KEY: ${{ secrets.VM_SSH_KEY }}
-      run: |
-        if [ -z "$SSH_KEY" ]; then
-          echo "Error: VM_SSH_KEY is empty!"
-          exit 1
-        else
-          echo "VM_SSH_KEY is set. Length: ${#SSH_KEY}"
-        fi
-
-    - name: Deploy to VM (Actual)
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.VM_HOST }}
-        username: ${{ secrets.VM_USERNAME }}
-        key: ${{ secrets.VM_SSH_KEY }}
-        script: |
-          cd ~/alphaforge
-          git pull origin main
-          
-          # Rebuild and restart containers
-          # Using --build to ensure any dependency changes are picked up
-          sudo docker compose up -d --build
-          
-          # Prune unused images to save space
-          sudo docker image prune -f
+      - name: Deploy to VM
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          script: |
+            cd ~/alphaforge || mkdir -p ~/alphaforge && cd ~/alphaforge
+            
+            # Pull latest code from GitHub
+            if [ -d ".git" ]; then
+              git pull origin main
+            else
+              git clone https://github.com/sadaru2002/AlphaForge.git .
+            fi
+            
+            # Stop and remove old containers
+            sudo docker stop alphaforge-backend alphaforge-scheduler alphaforge-telegram-bot 2>/dev/null || true
+            sudo docker rm alphaforge-backend alphaforge-scheduler alphaforge-telegram-bot 2>/dev/null || true
+            
+            # Rebuild and start containers with environment variables
+            sudo docker run -d --name alphaforge-backend --network host --restart always \
+              -e "OANDA_API_KEY=11bacc1becaf8df27bfd105a828ba70b-c9f535661ccd35bbd1310bffe8b79595" \
+              -e "OANDA_ACCOUNT_ID=101-001-37260967-001" \
+              -e "OANDA_BASE_URL=https://api-fxpractice.oanda.com/v3" \
+             -e "TELEGRAM_BOT_TOKEN=8333329847:AAG4sk5BMZWs-h07cRx0Y69qiK-I9NrJcrs" \
+              -e "TELEGRAM_CHAT_ID=1318456723" \
+              -e "DATABASE_URL=sqlite:///./trading_signals.db" \
+              $(sudo docker build -q .)  python app.py
+            
+            sudo docker run -d --name alphaforge-scheduler --network host --restart always \
+              -e "OANDA_API_KEY=11bacc1becaf8df27bfd105a828ba70b-c9f535661ccd35bbd1310bffe8b79595" \
+              -e "DATABASE_URL=sqlite:///./trading_signals.db" \
+              $(sudo docker build -q .) python signal_scheduler.py
+            
+            sudo docker run -d --name alphaforge-telegram-bot --network host --restart always \
+              -e "TELEGRAM_BOT_TOKEN=8333329847:AAG4sk5BMZWs-h07cRx0Y69qiK-I9NrJcrs" \
+              -e "TELEGRAM_CHAT_ID=1318456723" \
+              $(sudo docker build -q .) python telegram_bot.py
+            
+            echo "Deployment complete!"
