--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: alphaforge-backend:latest
     container_name: alphaforge-backend
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     network_mode: host
     volumes:
       - ~/alphaforge/data:/app/backend/data
@@ -20,8 +20,8 @@ services:
     image: alphaforge-backend:latest
     container_name: alphaforge-scheduler
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     network_mode: host
     volumes:
       - ~/alphaforge/data:/app/backend/data
@@ -37,8 +37,8 @@ services:
     image: alphaforge-backend:latest
     container_name: alphaforge-telegram-bot
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     network_mode: host
     volumes:
       - ~/alphaforge/data:/app/backend/data
