feat: Add signal status update buttons (WON/LOST/EXPIRED) and enhance gitignore security

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,15 @@ dist/
 .env.production.local
 .env.production
 .env.production.new
+.env_production
 env.example
+
+# SSH Keys - NEVER COMMIT THESE
+*.key
+*.pem
+ssh-key*
+id_rsa
+id_ed25519
 
 # IDE and editor files
 .vscode/
